# ComfyUI-WanVaceAdvanced

./: .gitignore  README.md  __init__.py  patches.py  pyproject.toml
core/: context_windows_hook.py  patches.py  utils.py  vace_encoding.py
example_workflows/: WanVaceAdvanced_Phantom_Ex_1.0.json  droz_WanVaceAdvanced_VaceContextWindows_1.0.json
nodes/: humo_custom_nodes.py  vace_custom_nodes.py  vace_detailer_hook.py  vace_encoding.py
