[project]
name = "wanvaceadvanced"
description = "Precise control over Vace frame strengths for reference images, control videos. Also allows Phantom embeddings to be combined with VACE accurately."
version = "1.1.2"
license = {file = "LICENSE"} 

[project.urls]
Repository = "https://github.com/drozbay/ComfyUI-WanVaceAdvanced"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "drozbay"
DisplayName = "ComfyUI-WanVaceAdvanced"
Icon = ""
